--- a/catalog.html
+++ b/catalog.html
@@ -141,6 +141,12 @@
         дрель.
       </p>
     </section>
+    <div>
+      <p>Товар добавлен в корзину!</p>
+      <a href="#">Оформить заказ</a>
+      <a href="#">Продолжить покупки</a>
+      <button type="button"></button>
+    </div>
   </main>
   <footer>
     <div>
