--- a/catalog.html
+++ b/catalog.html
@@ -32,8 +32,8 @@
     <ul>
       <li>
         <img src="img/icon-user.svg" width="15" height="15" alt="">
-        <p>Равшан Джамшутович</p>
-      <img src="img/icon-logout.svg" width="15" height="15" alt="">
+        <a href="#">Равшан Джамшутович</a>
+        <img src="img/icon-logout.svg" width="15" height="15" alt="">
     </ul>
     <ul>
       <li>
@@ -100,9 +100,9 @@
         </article>
 
         <ul>
-          <li><a href="#" aria-label="Страница 1">1</a></li>
-          <li><a href="#" aria-label="Страница 2">2</a></li>
-          <li><a href="#" aria-label="Страница 3">3</a></li>
+          <li><a href="#" aria-label="Страница ">1</a></li>
+          <li><a href="#" aria-label="Страница ">2</a></li>
+          <li><a href="#" aria-label="Страница ">3</a></li>
           <li><a href="#" aria-label="Следующая страница">Следующая</a></li>
         </ul>
       </section>
@@ -145,7 +145,7 @@
       <a href="#">Оформить заказ</a>
       <a href="#">Продолжить покупки</a>
       <button type="button"></button>
-      </div>
+    </div>
   </main>
   <footer>
     <div>
